// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandButton as 1`] = `
.c0 {
  border: none;
  outline: none;
  padding: 10px 22px;
  line-height: 1;
  -webkit-transition: all 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: all 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  color: inherit;
  background-color: transparent;
}

.c0:hover {
  background-color: rgba(0,0,0,0.1);
}

.c0:active {
  color: #000000;
  background-color: rgba(0,0,0,0.2);
}

<a
  className="c0"
  href="#"
>
  as a
</a>
`;

exports[`CommandButton basic 1`] = `
.c0 {
  border: none;
  outline: none;
  padding: 10px 22px;
  line-height: 1;
  -webkit-transition: all 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: all 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  color: inherit;
  background-color: transparent;
}

.c0:hover {
  background-color: rgba(0,0,0,0.1);
}

.c0:active {
  color: #000000;
  background-color: rgba(0,0,0,0.2);
}

<button
  className="c0"
>
  basic
</button>
`;
